packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/printf-debug/PrintfDebugCase.java
package sample.bad;

class PrintfDebugCase {
    void print() {
        System.out.println("debug");
    }
}
